--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -128,10 +128,7 @@ div.tech-container {
 
 }
 
-.padding {
-	padding-left: 70px;
-	padding-right: 70px;
-}
+
 
 div.tech-box p{
 	margin: 0 auto;
@@ -255,16 +252,66 @@ div.container #image-container{
 	text-align: center;
 }
 
-@media only screen and (max-width: 663px){
+.slides-wrapper {
+	text-align: center;
+	width: 100%;
+}
+
+@media only screen and (min-width: 620px) and (max-width: 663px){
+	.items{
+		padding-left: 15%;
+		padding-right: 15%;
+	}
+	.items img {
+		max-width: 30rem;
+	}
+
+	#left, #right{
+		width: 50%;
+	}
+
+	iframe {
+		width: 90%;
+	}
+
+	.box-two p {
+		font-size: 80%;
+
+	}
+
+	.box-two i{
+		display: none;
+	}
+
+	.tech-box {
+		width: 80%;
+		min-height: 80%;
+	}
+
+	#tech h5, #projects h5 {
+		font-size: 18px;
+
+	}
+
+	#contact p {
+		display: inline;
+	}
+	#about, #projects, #tech, #contact, footer .container {
+		text-align: center;
+	}
+}
+@media only screen and (min-width: 590px) and (max-width: 619px){
+	
 	.about-me {
 		width: 100%;
 	}
-	.items {
-		height: 300px;
+	.items{
+		padding-left: 17%;
+		padding-right: 17%;
 	}
 	.items img {
-		width: 477px;
-		max-height: 268px;
+		max-width: 28rem;
+		
 	}
 
 	#left, #right{
@@ -302,12 +349,118 @@ div.container #image-container{
 	}
 
 }
-@media only screen and (min-width: 360px) and (max-width: 663px) {
+@media only screen and (min-width: 550px) and (max-width: 589px){
+	
+	.about-me {
+		width: 100%;
+	}
+	.items{
+		padding-left: 19%;
+		padding-right: 19%;
+	}
+	.items img {
+		max-width: 25rem;
+		
+	}
+
+	#left, #right{
+		width: 50%;
+	}
+
+	iframe {
+		width: 90%;
+	}
+
+	.box-two p {
+		font-size: 80%;
+
+	}
+
+	.box-two i{
+		display: none;
+	}
+
+	.tech-box {
+		width: 80%;
+		min-height: 80%;
+	}
+
+	#tech h5, #projects h5 {
+		font-size: 18px;
+
+	}
+
+	#contact p {
+		display: inline;
+	}
+	#about, #projects, #tech, #contact, footer .container {
+		text-align: center;
+	}
+
+}
+@media only screen and (min-width: 501px) and (max-width: 549px){
+	
+	.about-me {
+		width: 100%;
+	}
+	.items{
+		padding-left: 19%;
+		padding-right: 19%;
+	}
+	.items img {
+		max-width: 23rem;
+		
+	}
+
+	#left, #right{
+		width: 50%;
+	}
+
+	iframe {
+		width: 90%;
+	}
+
+	.box-two p {
+		font-size: 80%;
+
+	}
+
+	.box-two i{
+		display: none;
+	}
+
+	.tech-box {
+		width: 80%;
+		min-height: 80%;
+	}
+
+	#tech h5, #projects h5 {
+		font-size: 18px;
+
+	}
+
+	#contact p {
+		display: inline;
+	}
+	#about, #projects, #tech, #contact, footer .container {
+		text-align: center;
+	}
+
+}
+@media only screen and (min-width: 360px) and (max-width: 500px) {
 	img.me {
 		width: 95%;
 		margin-top: 25px;
+
 	}
-	
+	.padding {
+		padding-left: 2%;
+		padding-right: 2%;
+	}
+	.items{
+		padding-left: 5.5%;
+		padding-right: 5.5%;
+	}
 	.items img {
 		max-width: 22rem;
 		/*max-height: 177px;*/
@@ -318,12 +471,43 @@ div.container #image-container{
 	.collapsible-header h4{
 		font-size: 160%;
 	}
+	#about, #projects, #tech, #contact, footer .container {
+		text-align: center;
+	}
+	iframe {
+		width: 90%;
+	}
 
+	.box-two p {
+		font-size: 80%;
+
+	}
+
+	.box-two i{
+		display: none;
+	}
+
+	.tech-box {
+		width: 80%;
+		min-height: 80%;
+	}
+
+	#tech h5, #projects h5 {
+		font-size: 18px;
+
+	}
+
+	#contact p {
+		display: inline;
+	}
 }
 @media only screen and (min-width: 664px) and (max-width: 767px) {
-	
+	.items{
+		padding-left: 9%;
+		padding-right: 9%;
+	}
 	.items img {
-		width: 549px;
+		max-width: 41rem;
 		
 	}
 	#left, #right {
@@ -346,7 +530,10 @@ div.container #image-container{
 }
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
-	
+	.padding {
+		padding-left: 70px;
+		padding-right: 70px;
+	}
 	.items img {
 		width: 639px;
 		
@@ -361,7 +548,10 @@ div.container #image-container{
 	}
 }
 @media only screen and (min-width: 993px) {
-	
+	.padding {
+	padding-left: 70px;
+	padding-right: 70px;
+	}
 	.container {
 		width: 85%
 	}
@@ -391,9 +581,7 @@ div.container #image-container{
 		width: 295px;
 		min-height: 250px;
 	}
-	/*#image-container{
-		width: 100%;
-	}*/
+	
 	div.me {
 		display: inline;
 	}
