added new project

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -181,6 +181,27 @@
 					</div>
 				</div>
 			</li>
+			<li>
+			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Weather Spy</h4></div>
+				<div class="collapsible-body">
+					<div class="box-one">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/dteQ1RALCas" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+					<div class="box-two">
+						<h5>Description</h5>
+						<p>A simple weather forecast application. Users are able to see a 3 day forecast summary by searching the city.</p>
+						<h5>Responsibilities</h5>
+						<ul class="bullets">
+							<li><i class="tiny material-icons">send</i><p> Set up validations and error handling.</p></li>
+							<li><i class="tiny material-icons">send</i><p> Implemented regex to match and scrap weather data.</p></li>
+							
+						</ul>
+						<h5 class="built">This project was built with: </h5>
+						<p>PHP, HTML, BootStrap, jQuery</p>
+						<h5 class="check">Check out the code <a href="http://github.com/wtran29/WeatherSpy">here</a></h5>
+					</div>
+				</div>
+			</li>
 		</ul>
 	</div>
 	<div id="tech" class="container">
