--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -107,7 +107,7 @@
 		</div>
 		<ul class="collapsible popout" data-collapsible="accordion">
 			<li>
-			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Club of Diamonds</h4></div>
+			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Club of Diamonds</h4><p>JavaScript</p></div>
 				<div class="collapsible-body">
 					<div class="box-one">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/1xWH7YfPYek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -131,7 +131,7 @@
 				</div>
 			</li>
 			<li>
-				<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>DoggyCrate</h4></div>
+				<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>DoggyCrate</h4><p>Java</p></div>
 				<div class="collapsible-body">
 					<div class="box-one">	
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/VvktAVBA8x4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -156,7 +156,7 @@
 				</div>
 			</li>
 			<li>
-				<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Engage</h4></div>
+				<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Engage</h4><p>Java</p></div>
 				<div class="collapsible-body">
 					<div class="box-one">
 						
@@ -182,7 +182,7 @@
 				</div>
 			</li>
 			<li>
-			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Weather Spy</h4></div>
+			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Weather Spy</h4><p>PHP</p></div>
 				<div class="collapsible-body">
 					<div class="box-one">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/dteQ1RALCas" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
